# match-three-env

./: .gitignore  README.md  pyproject.toml
examples/algorithms/: a2c copy.py  a2c.py  a2c_continuous.py  a2c_ppo.py  ae.py  greedy.py  rand.py  utils.py
examples/algorithms/models/: __init__.py  actor.py  actor_continuous.py  cnn.py  cnn_decoder.py  critic.py
examples/notebooks/: env.ipynb  game.ipynb  game2.ipynb
match3_demo/: pyproject.toml
match3_demo/src/match3_demo/: index.html  main.py  ppo_model.py  routes.py  services.py
match3_env/: pyproject.toml
match3_env/src/match3_env/: env.py  game_grid.py  utils.py
notebooks/: env.ipynb  game.ipynb  game2.ipynb  remove_matches.ipynb
src/: registration.py
src/algorithms/: a2c.py  utils.py
src/match_three/: env.py  game_grid.py  utils.py
src/match_three_env/: env.py  game_grid.py  utils.py
src/models/: __init__.py  actor.py  cnn.py  critic.py
