[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "match_three_env"
version = "0.0.1"
dependencies = [
    "jax>=0.6.0",
    "matplotlib>=3.10.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "gymnax>=0.0.8",
    "chex>=0.1.89",
    "flax>=0.10.5",
    "distrax>=0.1.5",
    "wandb>=0.19.10",
]
requires-python = ">=3.10"
readme = "README.md"
